--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@babel/core": "^7.16.5",
 		"@babel/eslint-parser": "^7.16.5",
+		"@crowdin/crowdin-api-client": "^1.41.4",
 		"@emotion/react": "^11.10.5",
 		"@emotion/server": "^11.10.0",
 		"@emotion/styled": "^11.10.5",
@@ -33,8 +34,10 @@
 		"babel-plugin-root-import": "^6.4.1",
 		"cross-env": "^7.0.3",
 		"dandelion-animated-slider": "^1.0.0",
+		"decompress-zip": "^0.3.3",
+		"fs-extra": "^11.3.0",
 		"i18next": "^22.4.6",
-        "loader-utils": "^3.2.1",
+		"loader-utils": "^3.2.1",
 		"next": "^14.1.0",
 		"next-i18next": "^13.0.2",
 		"next-images": "^1.8.5",
